<resources>
    <string name="widget_clock_label">Horloge</string>
    <string name="widget_clock_description">L\'heure et la date. Touchez pour ouvrir l\'horloge.</string>
    <string name="clock_date_format" translatable="false">EEEE d MMMM</string>
    <string name="clock_date_format_stacked" translatable="false">EEEE\nd MMMM</string>
    <string name="widget_agenda_one_column_label">Agenda</string>
    <string name="widget_agenda_one_column_description">Les événements du jour, en une colonne.</string>
    <string name="widget_agenda_two_columns_label">Agenda 2 colonnes</string>
    <string name="widget_agenda_two_columns_description">Les événements du jour, en deux colonnes.</string>
    <string name="widget_system_label">Système</string>
    <string name="widget_system_description">Batterie, réseau et stockage.</string>
    <string name="system_battery">BATTERIE</string>
    <string name="system_charging">En charge</string>
    <string name="system_on_battery">Sur batterie</string>
    <string name="system_network">RÉSEAU</string>
    <string name="system_wifi">Wi-Fi</string>
    <string name="system_mobile">Mobile</string>
    <string name="system_ethernet">Ethernet</string>
    <string name="system_mobile_data">Données mobiles</string>
    <string name="system_connected">Connecté</string>
    <string name="system_signal">Signal %1$d/4</string>
    <string name="system_offline">Hors ligne</string>
    <string name="system_airplane">Mode avion</string>
    <string name="system_no_network">Aucun réseau</string>
    <string name="system_storage">STOCKAGE</string>
    <string name="system_free_of">Libres sur %1$s</string>
    <string name="widget_system_advanced_label">Système avancé</string>
    <string name="widget_system_advanced_description">Signal, Wi-Fi, Bluetooth, batterie, mémoire, stockage, localisation, son.</string>
    <string name="system_cellular">SIGNAL</string>
    <string name="system_no_sim">Pas de SIM</string>
    <string name="system_wifi_label">WI-FI</string>
    <string name="system_on">Activé</string>
    <string name="system_off">Désactivé</string>
    <string name="system_not_connected">Non connecté</string>
    <string name="system_unavailable">Indisponible</string>
    <string name="system_bluetooth">BLUETOOTH</string>
    <string name="system_memory">MÉMOIRE</string>
    <string name="system_location">POSITION</string>
    <string name="system_sound">SON</string>
    <string name="system_ring">Sonnerie</string>
    <string name="system_vibrate">Vibreur</string>
    <string name="system_silent">Silencieux</string>
    <string name="system_dnd">Ne pas déranger</string>
    <string name="widget_world_clock_label">Fuseaux horaires</string>
    <string name="widget_world_clock_description">L\'heure de trois villes.</string>
    <string name="widget_countdown_label">Compte à rebours</string>
    <string name="widget_countdown_description">Les jours jusqu\'à une date.</string>
    <string name="countdown_default_title">Mon évènement</string>
    <string name="countdown_pick_date">Choisissez une date dans Halo</string>
    <string name="widget_controls_label">Contrôles</string>
    <string name="widget_controls_description">Lampe torche, Wi-Fi, Bluetooth, son, appareil photo.</string>
    <string name="controls_torch">Lampe</string>
    <string name="controls_wifi">Wi-Fi</string>
    <string name="controls_bluetooth">Bluetooth</string>
    <string name="controls_sound">Son</string>
    <string name="controls_camera">Photo</string>
    <string name="widget_month_label">Mois</string>
    <string name="widget_month_description">Le mois en cours, les jours avec événements marqués.</string>
    <string name="widget_weather_label">Météo</string>
    <string name="widget_weather_description">Température et jauge du jour, relevés, courbe des 24 heures.</string>
    <string name="weather_pick_place">Choisissez un lieu dans Halo</string>
    <string name="weather_loading">Prévisions en cours…</string>
    <string name="weather_my_position">Ma position</string>
    <string name="weather_now_at">Maintenant · %1$s</string>
    <string name="readout_feels">Ressenti</string>
    <string name="readout_wind">Vent</string>
    <string name="readout_humidity">Humidité</string>
    <string name="readout_uv">UV</string>
    <string name="readout_rain">Pluie</string>
    <string name="readout_rain_now">En cours</string>
    <string name="readout_rain_in">Dans %1$d min</string>
    <string name="readout_rain_at">%1$s · %2$d %%</string>
    <string name="readout_rain_none">Aucune · %1$d h</string>
    <string-array name="uv_levels">
        <item>Faible</item>
        <item>Modéré</item>
        <item>Élevé</item>
        <item>Très élevé</item>
        <item>Extrême</item>
    </string-array>
    <string-array name="cardinals">
        <item>N</item>
        <item>NE</item>
        <item>E</item>
        <item>SE</item>
        <item>S</item>
        <item>SO</item>
        <item>O</item>
        <item>NO</item>
    </string-array>
    <string name="weather_clear">Ciel dégagé</string>
    <string name="weather_partly">Peu nuageux</string>
    <string name="weather_cloudy">Couvert</string>
    <string name="weather_fog">Brouillard</string>
    <string name="weather_drizzle">Bruine</string>
    <string name="weather_rain">Pluie</string>
    <string name="weather_snow">Neige</string>
    <string name="weather_showers">Averses</string>
    <string name="weather_snow_showers">Averses de neige</string>
    <string name="weather_storm">Orage</string>
    <string name="weather_unknown">—</string>
    <string name="widget_sun_moon_label">Soleil et Lune</string>
    <string name="widget_sun_moon_description">Lever et coucher du soleil, phase de la lune.</string>
    <string name="sun_day_length">Jour %1$d h %2$02d</string>
    <string name="sun_pick_place">Lieu dans Météo</string>
    <string name="moon_illumination">Éclairée à %1$d %%</string>
    <string-array name="moon_phases">
        <item>Nouvelle lune</item>
        <item>Premier croissant</item>
        <item>Premier quartier</item>
        <item>Gibbeuse croissante</item>
        <item>Pleine lune</item>
        <item>Gibbeuse décroissante</item>
        <item>Dernier quartier</item>
        <item>Dernier croissant</item>
    </string-array>
    <string name="widget_rain_label">Pluie</string>
    <string name="widget_rain_description">La pluie qui arrive, et les 12 prochaines heures.</string>
    <string name="rain_now">Il pleut</string>
    <string name="rain_in_minutes">Pluie dans %1$d min</string>
    <string name="rain_at">Pluie probable à %1$s (%2$d %%)</string>
    <string name="rain_none">Pas de pluie d\'ici %1$d h</string>
    <string name="widget_sea_label">Mer et vagues</string>
    <string name="widget_sea_description">Les vagues, la houle et la température de l\'eau au plus près de chez vous.</string>
    <string name="sea_title">Mer · %1$s</string>
    <string name="sea_water">Eau</string>
    <string name="sea_height">%1$s m</string>
    <string name="sea_swell">Houle %1$s</string>
    <string name="sea_period">%1$d s</string>
    <string name="sea_distance">à %1$d km</string>
    <string name="sea_none">Pas de mer à moins de 55 km</string>
    <string name="widget_sky_label">Lune</string>
    <string name="widget_sky_description">La Lune dans sa phase du moment, son lever et son coucher, et les phases à venir.</string>
    <string name="moon_title">Lune</string>
    <string name="moon_age">%1$d j · %2$d %%</string>
    <string name="moon_full_today">Pleine lune aujourd\'hui</string>
    <string name="moon_full_tomorrow">Pleine lune demain</string>
    <string name="moon_full_in">Pleine lune dans %1$d jours</string>
    <string name="moon_new_today">Nouvelle lune aujourd\'hui</string>
    <string name="moon_new_tomorrow">Nouvelle lune demain</string>
    <string name="moon_new_in">Nouvelle lune dans %1$d jours</string>
    <string name="moon_up">Levée · coucher %1$s</string>
    <string name="moon_rise_set">Lever %1$s · coucher %2$s</string>
    <string name="moon_up_only">Levée</string>
    <string name="moon_rise_only">Lever %1$s</string>
    <string name="moon_tomorrow">demain %1$s</string>
    <string-array name="moon_principal">
        <item>Nouvelle</item>
        <item>1er quartier</item>
        <item>Pleine</item>
        <item>Dern. quartier</item>
    </string-array>
    <string name="rain_detail">Cumul 12 h %1$s mm · max %2$d %%</string>
    <string name="widget_allergy_label">Allergies</string>
    <string name="widget_allergy_description">Six pollens et la qualité de l\'air.</string>
    <string name="pollen_grass">Graminées</string>
    <string name="pollen_birch">Bouleau</string>
    <string name="pollen_alder">Aulne</string>
    <string name="pollen_olive">Olivier</string>
    <string name="pollen_mugwort">Armoise</string>
    <string name="pollen_ragweed">Ambroisie</string>
    <string name="pollen_group_grass">Herbe</string>
    <string name="pollen_group_trees">Arbres</string>
    <string name="pollen_group_weeds">Herbacées</string>
    <string name="pollen_most_present">Surtout : %1$s</string>
    <string name="pollen_highest">Pollens : %1$s</string>
    <string name="pollen_unavailable">Pollens indisponibles ici</string>
    <string name="aqi">Qualité de l\'air %1$s · %2$d</string>
    <string-array name="pollen_levels">
        <item>Aucun</item>
        <item>Faible</item>
        <item>Moyen</item>
        <item>Élevé</item>
        <item>Très élevé</item>
    </string-array>
    <string-array name="aqi_levels">
        <item>bonne</item>
        <item>correcte</item>
        <item>moyenne</item>
        <item>médiocre</item>
        <item>très médiocre</item>
        <item>mauvaise</item>
    </string-array>
    <string name="sample_alarm">jeu. 07:00</string>
    <string name="sample_countdown">Vacances</string>
    <string name="agenda_more" translatable="false">•••</string>
    <string name="agenda_today">Aujourd\'hui</string>
    <string name="agenda_tomorrow">Demain</string>
    <string name="agenda_all_day">Toute la journée</string>
    <string name="agenda_range">%1$s – %2$s</string>
    <string name="agenda_from">À partir de %1$s</string>
    <string name="agenda_until">Jusqu\'à %1$s</string>
    <string name="agenda_untitled">(Sans titre)</string>
    <string name="agenda_empty">Aucun événement</string>
    <string name="agenda_permission_missing">Touchez pour autoriser Halo à lire votre agenda.</string>
    <plurals name="countdown_days_left">
        <item quantity="one">jour restant</item>
        <item quantity="many">jours restants</item>
        <item quantity="other">jours restants</item>
    </plurals>
    <plurals name="countdown_days_ago">
        <item quantity="one">jour écoulé</item>
        <item quantity="many">jours écoulés</item>
        <item quantity="other">jours écoulés</item>
    </plurals>
    <string name="wallpaper_label">Halo · Circuit</string>
    <string name="wallpaper_description">L\'intérieur du téléphone en néon, qui suit son inclinaison, sa batterie et son réseau.</string>
    <string name="battery_title">Batterie · 24 h</string>
    <string name="battery_temperature">Temp.</string>
    <string name="battery_voltage">Tension</string>
    <string name="battery_cycles">Cycles</string>
    <string name="battery_health">Santé</string>
    <string name="shortcut_wallpaper">Fond d\'écran</string>
    <string name="shortcut_widgets">Widgets</string>
    <string name="shortcut_settings">Réglages</string>
    <string name="progress_title">Progression</string>
    <string name="progress_day">Jour</string>
    <string name="progress_week">Semaine</string>
    <string name="progress_month">Mois</string>
    <string name="progress_year">Année</string>
    <string name="media_previous">Précédent</string>
    <string name="media_play">Lecture ou pause</string>
    <string name="media_next">Suivant</string>
</resources>